# C-Pico_USB

./: CMakeLists.txt  README.md  build.sh
src/: main.c
src/include/usb/: common.h  fat16.h  hid.h  hid_keyboard.h  msc.h  usb.h
src/usb/: fat16.c  hid_keyboard.c  msc.c  usb.c
